Add required fields

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -13,8 +13,8 @@ collections:
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "default"}
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Audio", name: "audio", widget: "string"}
-      - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Description", name: "description", widget: "string"}
-      - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Title", name: "title", widget: "string", required: true }
+      - {label: "Audio", name: "audio", widget: "string", require: true }
+      - {label: "Publish Date", name: "date", widget: "datetime", required: true }
+      - {label: "Description", name: "description", widget: "string", required: true }
+      - {label: "Body", name: "body", widget: "markdown", required: false }
