--- a/admin/config.yml
+++ b/admin/config.yml
@@ -6,10 +6,10 @@ backend:
 media_folder: 'public/images'
 publish_mode: editorial_workflow
 collections:
-  - name: 'blog'
-    label: 'Blog'
+  - name: 'episodio'
+    label: 'Episodios'
     folder: '_posts/'
-    create: true # Allow users to create new documents in this collection
+    create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "default"}
@@ -18,3 +18,18 @@ collections:
       - {label: "Publish Date", name: "date", widget: "datetime", required: true }
       - {label: "Description", name: "description", widget: "string", required: true }
       - {label: "Body", name: "body", widget: "markdown", required: false }
+      - {label: "Category", name: "category", widget: "markdown", required: true, default: "podcast" }
+  - name: 'revista'
+    label: 'Numero Revista'
+    folder: '_posts/'
+    create: true
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    fields:
+      - {label: "Layout", name: "layout", widget: "hidden", default: "default"}
+      - {label: "Title", name: "title", widget: "string", required: true }
+      - {label: "Image", name: "image", widget: "string", require: true }
+      - {label: "Publish Date", name: "date", widget: "datetime", required: true }
+      - {label: "Description", name: "description", widget: "string", required: true }
+      - {label: "Body", name: "body", widget: "markdown", required: false }
+      - {label: "Category", name: "category", widget: "markdown", required: true, default: "revista" }
+
