--- a/admin/config.yml
+++ b/admin/config.yml
@@ -8,7 +8,7 @@ publish_mode: editorial_workflow
 collections:
   - name: 'episodio'
     label: 'Episodios'
-    folder: '_posts/'
+    folder: '_posts/podcast'
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields:
@@ -21,7 +21,7 @@ collections:
       - {label: "Category", name: "category", widget: "markdown", required: true, default: "podcast" }
   - name: 'revista'
     label: 'Numero Revista'
-    folder: '_posts/'
+    folder: '_posts/revista'
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields:
@@ -32,4 +32,3 @@ collections:
       - {label: "Description", name: "description", widget: "string", required: true }
       - {label: "Body", name: "body", widget: "markdown", required: false }
       - {label: "Category", name: "category", widget: "markdown", required: true, default: "revista" }
-
