--- a/admin/config.yml
+++ b/admin/config.yml
@@ -27,7 +27,8 @@ collections:
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "post"}
       - {label: "Title", name: "title", widget: "string", required: true }
-      - {label: "Image", name: "image", widget: "string", require: true }
+      - {label: "Image", name: "image", widget: "string", required: false }
+      - {label: "Lektu", name: "lektu", widget: "string", required: false }
       - {label: "Publish Date", name: "date", widget: "datetime", required: true }
       - {label: "Description", name: "description", widget: "string", required: true }
       - {label: "Body", name: "body", widget: "markdown", required: false }
