--- a/admin/config.yml
+++ b/admin/config.yml
@@ -46,3 +46,16 @@ collections:
       - {label: "Description", name: "description", widget: "string", required: true }
       - {label: "Body", name: "body", widget: "markdown", required: false }
       - {label: "Category", name: "category", widget: "markdown", required: true, default: "noticias" }
+  - name: 'blog'
+    label: 'Blog'
+    folder: '_posts/blog'
+    create: true
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    fields:
+      - {label: "Layout", name: "layout", widget: "hidden", default: "page"}
+      - {label: "Title", name: "title", widget: "string", required: true }
+      - {label: "Image", name: "image", widget: "string", require: false }
+      - {label: "Publish Date", name: "date", widget: "datetime", required: true }
+      - {label: "Description", name: "description", widget: "string", required: true }
+      - {label: "Body", name: "body", widget: "markdown", required: false }
+      - {label: "Category", name: "category", widget: "markdown", required: true, default: "blog" }
