--- a/admin/config.yml
+++ b/admin/config.yml
@@ -55,7 +55,7 @@ collections:
       - {label: "Layout", name: "layout", widget: "hidden", default: "page"}
       - {label: "Title", name: "title", widget: "string", required: true }
       - {label: "Image", name: "image", widget: "string", require: false }
-      - {label: "Author", name: "author", widget: "relation", collection: "team", required: true }
+      - {label: "Author", name: "author", widget: "relation", collection: "team", value_field: "name", search_fields: "name", multiple: true, required: true }
       - {label: "Tags", name: "tags", widget: "list"}
       - {label: "Publish Date", name: "date", widget: "datetime", required: true }
       - {label: "Description", name: "description", widget: "string", required: true }
