--- a/admin/config.yml
+++ b/admin/config.yml
@@ -68,7 +68,7 @@ collections:
           - {label: Name, name: name, widget: string, required: true}
           - {label: Twitter, name: twitter, widget: string, required: false}
           - {label: "Image", name: "image", widget: "image", required: false}
-      - {label: "Tags", name: "tags", widget: "list", fields: {label: "Tag", name: "tag", widget: "string"}}
+      - {label: "Tags", name: "tags", widget: "list", fields: [{label: "Tag", name: "tag", widget: "string"}]}
       - {label: "Publish Date", name: "date", widget: "datetime", required: true }
       - {label: "Description", name: "description", widget: "string", required: true }
       - {label: "Body", name: "body", widget: "markdown", required: false }
