--- a/admin/config.yml
+++ b/admin/config.yml
@@ -18,7 +18,7 @@ collections:
       - {label: "Publish Date", name: "date", widget: "datetime", required: true }
       - {label: "Description", name: "description", widget: "string", required: true }
       - {label: "Body", name: "body", widget: "markdown", required: false }
-      - {label: "Category", name: "category", widget: "markdown", required: true, default: "podcast" }
+      - {label: "Category", name: "category", widget: "hidden", required: true, default: "podcast" }
   - name: 'revista'
     label: 'Revista'
     folder: '_posts/revista'
@@ -32,7 +32,7 @@ collections:
       - {label: "Publish Date", name: "date", widget: "datetime", required: true }
       - {label: "Description", name: "description", widget: "string", required: true }
       - {label: "Body", name: "body", widget: "markdown", required: false }
-      - {label: "Category", name: "category", widget: "markdown", required: true, default: "revista" }
+      - {label: "Category", name: "category", widget: "hidden", required: true, default: "revista" }
   - name: 'noticias'
     label: 'Noticias'
     folder: '_posts/noticias'
@@ -45,7 +45,7 @@ collections:
       - {label: "Publish Date", name: "date", widget: "datetime", required: true }
       - {label: "Description", name: "description", widget: "string", required: true }
       - {label: "Body", name: "body", widget: "markdown", required: false }
-      - {label: "Category", name: "category", widget: "markdown", required: true, default: "noticias" }
+      - {label: "Category", name: "category", widget: "hidden", required: true, default: "noticias" }
   - name: 'blog'
     label: 'Posts'
     folder: '_posts/blog'
@@ -72,7 +72,7 @@ collections:
       - {label: "Publish Date", name: "date", widget: "datetime", required: true }
       - {label: "Description", name: "description", widget: "string", required: true }
       - {label: "Body", name: "body", widget: "markdown", required: false }
-      - {label: "Category", name: "category", widget: "markdown", required: true, default: "blog" }
+      - {label: "Category", name: "category", widget: "hidden", required: true, default: "blog" }
   - name: "pages"
     label: "Páginas estáticas"
     files:
