--- a/admin/config.yml
+++ b/admin/config.yml
@@ -41,7 +41,7 @@ collections:
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "page"}
       - {label: "Title", name: "title", widget: "string", required: true }
-      - {label: "Image", name: "image", widget: "image", require: false }
+      - {label: "Image", name: "image", widget: "image", required: false }
       - {label: "Publish Date", name: "date", widget: "datetime", required: true }
       - {label: "Description", name: "description", widget: "string", required: true }
       - {label: "Body", name: "body", widget: "markdown", required: false }
@@ -54,7 +54,7 @@ collections:
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
       - {label: "Title", name: "title", widget: "string", required: true }
-      - {label: "Image", name: "image", widget: "image", require: false }
+      - {label: "Image", name: "image", widget: "image", required: false }
       - label: Author
         name: author
         widget: list
